--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,12 @@
         "php": ">=7.4.0",
         "yiisoft/yii2": "~2.0.45",
         "yiisoft/yii2-bootstrap5": "~2.0.2",
-        "yiisoft/yii2-symfonymailer": "~2.0.3",
+        "yiisoft/yii2-symfonymailer": "^3.0",
         "hail812/yii2-adminlte3": "*",
-        "hail812/yii2-adminlte-widgets": "^1.0"
+        "hail812/yii2-adminlte-widgets": "^1.0",
+        "kartik-v/yii2-grid": "dev-master",
+        "kartik-v/yii2-export": "*",
+        "kartik-v/yii2-bootstrap5-dropdown": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
