--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "hail812/yii2-adminlte-widgets": "^1.0",
         "kartik-v/yii2-grid": "dev-master",
         "kartik-v/yii2-export": "*",
-        "kartik-v/yii2-bootstrap5-dropdown": "@dev"
+        "kartik-v/yii2-bootstrap5-dropdown": "@dev",
+        "kartik-v/yii2-widget-depdrop": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
