--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
-version: '3.2'
 
 services:
 
   frontend:
     build: frontend
     ports:
-      - 20080:80
+      - 8090:80
     volumes:
       # Re-use local composer cache via host-volume
       - ~/.composer-docker/cache:/root/.composer/cache:delegated
@@ -15,7 +14,7 @@ services:
   backend:
     build: backend
     ports:
-      - 21080:80
+      - 8091:80
     volumes:
       # Re-use local composer cache via host-volume
       - ~/.composer-docker/cache:/root/.composer/cache:delegated
@@ -25,10 +24,11 @@ services:
   mysql:
     image: mysql:5.7
     environment:
-      - MYSQL_ROOT_PASSWORD=verysecret
-      - MYSQL_DATABASE=yii2advanced
-      - MYSQL_USER=yii2advanced
+      - MYSQL_ROOT_PASSWORD=secret
+      - MYSQL_DATABASE=yii2adv
+      - MYSQL_USER=admin
       - MYSQL_PASSWORD=secret
+
 
   #pgsql:
   #  image: postgres:9.5
@@ -36,3 +36,15 @@ services:
   #    - POSTGRES_DB=yii2advanced
   #    - POSTGRES_USER=yii2advanced
   #    - POSTGRES_PASSWORD=secret
+
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin_app
+    environment:
+      PMA_HOST: mysql
+      MYSQL_ROOT_PASSWORD: secret
+    ports:
+      - "8092:80"
+    depends_on:
+      - mysql
